Create a card to display a user

--- a/5.Node.js-JSONAPI-Forms/Demo#1/index.html
+++ b/5.Node.js-JSONAPI-Forms/Demo#1/index.html
@@ -49,5 +49,10 @@
                     active:text-gray-800">Search</button>
             </div>
         </form>
+
+        <!-- Creating a card: a little box contains the user's information -->
+        <div id="container" class="mt-10">
+
+        </div>
     </body>
 </html>
