--- a/5.Node.js-JSONAPI-Forms/Demo#1/index.html
+++ b/5.Node.js-JSONAPI-Forms/Demo#1/index.html
@@ -15,7 +15,7 @@
             text-gray-900">Search a GitHub User</h1>
         <form class="w-full max-w-sm mx-auto">
             <div class="mt-10 flex">
-                <input name="username" class="
+                <input name="username" required class="
                     form-input 
                     block 
                     w-full 
